# ine5420-t1

./: .gitignore  README.md  README.rst  pyproject.toml
src/: __main__.py
src/enum/: obj_type.py
src/enums/: obj_type.py
src/models/: object.py  reader.py
src/view/: file_reader.py  main_window_layout.py  transform2d.py  util.py  window.py  window.py.orig
t1/: __main__.py
t1/Views/: window.py
tests/: test_t1.py
